--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html,
 body,
 div,
@@ -105,17 +104,21 @@ nav,
 section {
   display: block;
 }
+
 body {
   line-height: 1;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -123,7 +126,33 @@ q:after {
   content: '';
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+.form-div {
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  .textfield-div {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 50%;
+    height: auto;
+  }
+  .button-div {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 50%;
+    height: auto;
+  }
+}
+.todo-list-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
